--- a/templates/front/day/_cell_day_data.html.twig
+++ b/templates/front/day/_cell_day_data.html.twig
@@ -2,4 +2,7 @@
     <a href="{{ path('grr_front_entry_show', {'id': entry.id}) }}">
     {{ entry.name }}</a> <span
             class="text-muted">({{ entry.startTime|date('H:i') }} to {{ entry.endTime|date('H:i') }})</span>
+    <div class="col-2">
+                <div style="background-color: {{ entry.type.color }}">&nbsp;</div>
+            </div>
 </td>
