--- a/templates/front/entry/form/_form22.html.twig
+++ b/templates/front/entry/form/_form22.html.twig
@@ -6,10 +6,10 @@
         {% include '@grr_front/entry/form/_form_entry.html.twig' %}
     </div>
     <div class="col-6">
-        {% include '@grr_front/entry/form/_form_periodicity.html.twig' %}
+        {% include '@grr_front/periodicity/_show.html.twig' %}
     </div>
 </div>
 
-<button class="btn btn-primary" type="submit"><i class="far fa-save"></i> {{ button_label|default('form.btn.save')|trans({}, 'actions') }}</button>
+<button class="btn btn-primary" type="submit"><i class="far fa-save"></i> {{ 'form.btn.save'|trans({}, 'actions') }}</button>
 
 {{ form_end(form) }}
