--- a/templates/front/periodicity/_delete_form.html.twig
+++ b/templates/front/periodicity/_delete_form.html.twig
@@ -1,5 +1,29 @@
-<form method="post" action="{{ path('periodicity_delete', {'id': periodicity.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
-    <input type="hidden" name="_method" value="DELETE">
-    <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ periodicity.id) }}">
-    <button class="btn">Delete</button>
-</form>
+{% if entry.periodicity %}
+    <!-- Modal periodicity -->
+    <div class="modal fade" id="deleteModalPeriodicity" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel"
+         aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="deleteModalLabel">{{ 'modal.delete.title'|trans({}, 'actions') }}</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    {{ 'periodicity.delete.confirm'|trans({'name': entry.name}, 'actions') }}
+                </div>
+                <div class="modal-footer">
+                    <form method="post" action="{{ path('periodicity_delete', {'id': entry.periodicity.id}) }}">
+                        <input type="hidden" name="_method" value="DELETE">
+                        <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ entry.periodicity.id) }}">
+                        <button type="button" class="btn btn-secondary"
+                                data-dismiss="modal">{{ 'form.btn.cancel'|trans({}, 'actions') }}</button>
+                        <button type="submit"
+                                class="btn btn-danger">{{ 'form.btn.delete.label'|trans({}, 'actions') }}</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+{% endif %}
