--- a/templates/front/entry/_delete_form.html.twig
+++ b/templates/front/entry/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<!-- Modal -->
+<!-- Modal entry -->
 <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel"
      aria-hidden="true">
     <div class="modal-dialog" role="document">
@@ -18,7 +18,7 @@
                     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ entry.id) }}">
                     <button type="button" class="btn btn-secondary"
                             data-dismiss="modal">{{ 'form.btn.cancel'|trans({}, 'actions') }}</button>
-                    <button type="submit" class="btn btn-danger">{{ 'form.btn.delete'|trans({}, 'actions') }}</button>
+                    <button type="submit" class="btn btn-danger">{{ 'form.btn.delete.label'|trans({}, 'actions') }}</button>
                 </form>
             </div>
         </div>
