--- a/templates/front/periodicity/edit.html.twig
+++ b/templates/front/periodicity/edit.html.twig
@@ -1,14 +1,13 @@
 {% extends '@grr_front/layout_front.html.twig' %}
 
-{% block title %}{{ 'entry.new.title'|trans({},'actions') }}{% endblock %}
+{% block title %}{{ 'action.edit'|trans({},'actions') }} {{ entry.name }}{% endblock %}
 
 {% block body %}
 
     <div class="card bg-light mb-3">
         <div class="card-header">
-            <h3>{{ 'entry.new.title'|trans({},'actions') }}</h3>
+            <h2>{{ entry.name }}</h2>
         </div>
-
         <div class="card-body">
             {{ form_start(form) }}
             {{ form_errors(form) }}
@@ -27,8 +26,9 @@
     </div>
 
     <br/>
-    <a href="{{ path('grr_front_entry_index') }}"><i
+    <a href="{{ path('grr_front_entry_show',{'id': entry.id}) }}"><i
                 class="fas fa-arrow-left"></i> {{ 'form.btn.cancel'|trans({}, 'actions') }}</a>
+
 {% endblock %}
 {% block scripts %}
     <script src="{{ asset('js/periodicity_options_weeks.js') }}"></script>
