--- a/templates/front/entry/_actions.html.twig
+++ b/templates/front/entry/_actions.html.twig
@@ -1,4 +1,4 @@
-<a href="{{ path('grr_front_entry_index') }}" class="btn btn-primary" role='button'><i class="fas fa-list"></i>
+<a href="{{ url_back }}" class="btn btn-primary" role='button'><i class="fas fa-list"></i>
     {{ 'back.to.list'|trans({}, 'actions') }}
 </a>
 
