--- a/templates/front/entry/show.html.twig
+++ b/templates/front/entry/show.html.twig
@@ -12,7 +12,7 @@
             {% include '@grr_front/entry/_actions.html.twig' %}
 
             <div class="row">
-                <div class="col">
+                <div class="col-6">
                     <table class="table table-bordered">
                         <tbody>
                         <tr>
@@ -54,7 +54,7 @@
 
                     {{ entry.description|nl2br }}
                 </div>
-                <div class="col">
+                <div class="col-6">
                     {% include '@grr_front/periodicity/_show.html.twig' %}
                 </div>
             </div>
