--- a/templates/front/periodicity/_delete_form.html.twig
+++ b/templates/front/periodicity/_delete_form.html.twig
@@ -20,7 +20,7 @@
                         <button type="button" class="btn btn-secondary"
                                 data-dismiss="modal">{{ 'form.btn.cancel'|trans({}, 'actions') }}</button>
                         <button type="submit"
-                                class="btn btn-danger">{{ 'form.btn.delete.label'|trans({}, 'actions') }}</button>
+                                class="btn btn-danger">{{ 'form.btn.delete.label.label'|trans({}, 'actions') }}</button>
                     </form>
                 </div>
             </div>
