--- a/templates/admin/type_entry/_actions.html.twig
+++ b/templates/admin/type_entry/_actions.html.twig
@@ -1,12 +1,12 @@
 <a href="{{ path('grr_admin_type_entry_edit', { 'id': type_entry.id }) }}" role="button"
-   class="btn btn-primary"><i class="far fa-edit"></i> {{ 'form.btn.edit'|trans({}, 'actions') }}</a>
+   class="btn btn-primary"><i class="far fa-edit"></i> {{ 'form.btn.edit.label'|trans({}, 'actions') }}</a>
 
 <a href="{{ path('grr_admin_type_entry_index') }}" class="btn btn-primary" role='button'><i class="fas fa-list"></i>
     {{ 'back.to.list'|trans({}, 'actions') }}
 </a>
 
 <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#deleteModal">
-    <i class="fas fa-trash"></i> {{ 'form.btn.delete'|trans({}, 'actions') }}
+    <i class="fas fa-trash"></i> {{ 'form.btn.delete.label'|trans({}, 'actions') }}
 </button>
 <br/>
 <br/>
