--- a/templates/admin/user/_actions.html.twig
+++ b/templates/admin/user/_actions.html.twig
@@ -1,5 +1,5 @@
 <a href="{{ path('grr_admin_user_edit', { 'id': user.id }) }}" role="button"
-   class="btn btn-primary"><i class="fas fa-user-edit"></i> {{ 'form.btn.edit'|trans({}, 'actions') }}</a>
+   class="btn btn-primary"><i class="fas fa-user-edit"></i> {{ 'form.btn.edit.label'|trans({}, 'actions') }}</a>
 
 <a href="{{ path('grr_authorization_show_by_user', { 'id': user.id }) }}" role="button"
    class="btn btn-primary"><i class="fas fa-user-shield"></i> {{ 'form.btn.perimission'|trans({}, 'actions') }}</a>
@@ -12,7 +12,7 @@
 </a>
 
 <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#deleteModal">
-    <i class="fas fa-user-times"></i> {{ 'form.btn.delete'|trans({}, 'actions') }}
+    <i class="fas fa-user-times"></i> {{ 'form.btn.delete.label'|trans({}, 'actions') }}
 </button>
 <br/>
 <br/>
