--- a/templates/front/account/_delete_form.html.twig
+++ b/templates/front/account/_delete_form.html.twig
@@ -17,7 +17,7 @@
                     <input type="hidden" name="_method" value="DELETE">
                     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ user.id) }}">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">{{ 'form.btn.cancel'|trans({}, 'actions') }}</button>
-                    <button type="button" class="btn btn-primary">{{ 'form.btn.delete'|trans({}, 'actions') }}</button>
+                    <button type="button" class="btn btn-primary">{{ 'form.btn.delete.label'|trans({}, 'actions') }}</button>
                 </form>
             </div>
         </div>
