--- a/templates/front/entry/_delete_form.html.twig
+++ b/templates/front/entry/_delete_form.html.twig
@@ -18,7 +18,7 @@
                     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ entry.id) }}">
                     <button type="button" class="btn btn-secondary"
                             data-dismiss="modal">{{ 'form.btn.cancel'|trans({}, 'actions') }}</button>
-                    <button type="submit" class="btn btn-danger">{{ 'form.btn.delete.label'|trans({}, 'actions') }}</button>
+                    <button type="submit" class="btn btn-danger">{{ 'form.btn.delete.label.label'|trans({}, 'actions') }}</button>
                 </form>
             </div>
         </div>
