--- a/templates/security/authorization/_delete_form.html.twig
+++ b/templates/security/authorization/_delete_form.html.twig
@@ -29,7 +29,7 @@
                     <input type="hidden" name="_urlback" id="_urlback" value="{{ url_back }}">
                     <button type="button" class="btn btn-secondary"
                             data-dismiss="modal">{{ 'form.btn.cancel'|trans({}, 'actions') }}</button>
-                    <button type="submit" class="btn btn-danger">{{ 'form.btn.delete'|trans({}, 'actions') }}</button>
+                    <button type="submit" class="btn btn-danger">{{ 'form.btn.delete.label'|trans({}, 'actions') }}</button>
                 </form>
             </div>
         </div>
