--- a/templates/security/authorization/_detail_permissions.html.twig
+++ b/templates/security/authorization/_detail_permissions.html.twig
@@ -26,7 +26,7 @@
                 <button name="coucou" type="button" class="btnDelete btn btn-danger btn-sm" data-toggle="modal"
                         data-target="#deleteAuthorization" data-id="{{ authorization.id }}"
                         data-token="{{ csrf_token('delete' ~ authorization.id) }}">
-                    <i class="fas fa-trash"></i> {{ 'form.btn.delete'|trans({}, 'actions') }}
+                    <i class="fas fa-trash"></i> {{ 'form.btn.delete.label'|trans({}, 'actions') }}
                 </button>
             </td>
         </tr>
