--- a/templates/front/month/_entry_line.html.twig
+++ b/templates/front/month/_entry_line.html.twig
@@ -9,7 +9,8 @@
     <div class="card-body">
         <div class="row">
             <div class="col-10">
-                <h6 class="card-subtitle mb-2 text-muted">{{ entry.startTime|date('d H:i') }}
+                <h6 class="card-subtitle mb-2 text-muted">
+                    {{ entry.startTime|date('H:i') }}
                     - {{ entry.endtime|date('H:i') }}</h6>
                 <p class="card-text">
                     <strong>{{ entry.room }}</strong><br/>
