--- a/templates/search/_entry.html.twig
+++ b/templates/search/_entry.html.twig
@@ -3,18 +3,13 @@
     {{ form_start(form, { 'attr': {'class': 'form-inline'}}) }}
     {{ form_errors(form) }}
 
-    {{ form_widget(form.name) }}
+    {{ form_row(form.name) }}
+    {{ form_row(form.area) }}
+    {{ form_row(form.room) }}
+    {{ form_row(form.entry_type) }}
 
-    {{ form_widget(form.area) }}
-
-    {{ form_widget(form.room) }}
-
-    {{ form_widget(form.entry_type) }}
-
-    {{ form_widget(form.type) }}
-
-    <br clear="all" />
-    <button type="submit" class="btn btn-primary mb-2">Submit</button>
+    <br />
+    <button type="submit" class="btn btn-primary mb-2">{{'btn.search'|trans}}</button>
 
 </div>
 
