--- a/templates/_flash_messages.html.twig
+++ b/templates/_flash_messages.html.twig
@@ -4,7 +4,7 @@
             {% for type, messages in app.session.flashBag.all %}
                 {% for message in messages %}
                     {# Bootstrap alert, see http://getbootstrap.com/components/#alerts #}
-                    <div class="alert alert-dismissible alert-{{ type }}" role="alert">
+                    <div class="alert alert-dismissible alert-{{ type }} fade show" role="alert">
                         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
