Restrict list area et room

--- a/templates/admin/user/_form.html.twig
+++ b/templates/admin/user/_form.html.twig
@@ -25,10 +25,10 @@
 
 <div class="row">
     <div class="col-6">
-        {{ form_row(form.area_default) }}
+        {{ form_row(form.area) }}
     </div>
     <div class="col-6">
-        {{ form_row(form.room_default) }}
+        {{ form_row(form.room) }}
     </div>
 </div>
 
