--- a/templates/admin/user/show.html.twig
+++ b/templates/admin/user/show.html.twig
@@ -36,11 +36,11 @@
                 </tr>
                 <tr>
                     <th>{{ 'entry.form.area.label'| trans }}</th>
-                    <td>{{ user.areaDefault }}</td>
+                    <td>{{ user.area }}</td>
                 </tr>
                 <tr>
                     <th>{{ 'user.form.room.label'| trans }}</th>
-                    <td>{{ user.roomDefault }}</td>
+                    <td>{{ user.room }}</td>
                 </tr>
             </table>
         </div>
