--- a/templates/front/account/_form.html.twig
+++ b/templates/front/account/_form.html.twig
@@ -20,10 +20,10 @@
 
 <div class="row">
     <div class="col-6">
-        {{ form_row(form.area_default) }}
+        {{ form_row(form.area) }}
     </div>
     <div class="col-6">
-        {{ form_row(form.room_default) }}
+        {{ form_row(form.room) }}
     </div>
 </div>
 
