--- a/templates/front/entry/_actions.html.twig
+++ b/templates/front/entry/_actions.html.twig
@@ -2,46 +2,55 @@
     {{ 'back.to.list'|trans({}, 'actions') }}
 </a>
 
+
 {% if entry.periodicity %}
     {# EDIT #}
-    <div class="btn-group" role="group">
-        <button id="btnGroupDrop1" type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown"
-                aria-haspopup="true" aria-expanded="false">
-            <i class="far fa-edit"></i> {{ 'form.btn.edit.label'|trans({}, 'actions') }}
-        </button>
-        <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
+    {% if is_granted('grr.entry.edit', entry) %}
+        <div class="btn-group" role="group">
+            <button id="btnGroupDrop1" type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown"
+                    aria-haspopup="true" aria-expanded="false">
+                <i class="far fa-edit"></i> {{ 'form.btn.edit.label'|trans({}, 'actions') }}
+            </button>
+            <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
 
-            <a href="{{ path('grr_front_entry_edit', { 'id': entry.id }) }}" role="button"
-               class="dropdown-item"> {{ 'form.btn.edit.entry'|trans({}, 'actions') }}</a>
+                <a href="{{ path('grr_front_entry_edit', { 'id': entry.id }) }}" role="button"
+                   class="dropdown-item"> {{ 'form.btn.edit.entry'|trans({}, 'actions') }}</a>
 
-            <a href="{{ path('grr_front_periodicity_edit', { 'id': entry.id }) }}" role="button"
-               class="dropdown-item"> {{ 'form.btn.edit.periodicity'|trans({}, 'actions') }}</a>
+                <a href="{{ path('grr_front_periodicity_edit', { 'id': entry.id }) }}" role="button"
+                   class="dropdown-item"> {{ 'form.btn.edit.periodicity'|trans({}, 'actions') }}</a>
 
+            </div>
         </div>
-    </div>
+    {% endif %}
 
-    {# DELETE #}
-    <div class="btn-group" role="group">
-        <button id="btnGroupDrop1" type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown"
-                aria-haspopup="true" aria-expanded="false">
+    {% if is_granted('grr.entry.delete', entry) %}
+        {# DELETE #}
+        <div class="btn-group" role="group">
+            <button id="btnGroupDrop1" type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown"
+                    aria-haspopup="true" aria-expanded="false">
+                <i class="fas fa-trash"></i> {{ 'form.btn.delete.label'|trans({}, 'actions') }}
+            </button>
+            <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
+                <button class="dropdown-item" data-toggle="modal" data-target="#deleteModal">
+                    {{ 'form.btn.delete.entry'|trans({}, 'actions') }}
+                </button>
+                <button class="dropdown-item" data-toggle="modal" data-target="#deleteModalPeriodicity">
+                    {{ 'form.btn.delete.periodicity'|trans({}, 'actions') }}
+                </button>
+            </div>
+        </div>
+    {% endif %}
+{% else %}
+    {% if is_granted('grr.entry.edit', entry) %}
+        <a href="{{ path('grr_front_entry_edit', { 'id': entry.id }) }}" role="button"
+           class="btn btn-primary"><i class="far fa-edit"></i> {{ 'form.btn.edit.label'|trans({}, 'actions') }}</a>
+
+    {% endif %}
+    {% if is_granted('grr.entry.delete', entry) %}
+        <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#deleteModal">
             <i class="fas fa-trash"></i> {{ 'form.btn.delete.label'|trans({}, 'actions') }}
         </button>
-        <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
-            <button  class="dropdown-item" data-toggle="modal" data-target="#deleteModal">
-                {{ 'form.btn.delete.entry'|trans({}, 'actions') }}
-            </button>
-            <button class="dropdown-item" data-toggle="modal" data-target="#deleteModalPeriodicity">
-               {{ 'form.btn.delete.periodicity'|trans({}, 'actions') }}
-            </button>
-        </div>
-    </div>
-{% else %}
-    <a href="{{ path('grr_front_entry_edit', { 'id': entry.id }) }}" role="button"
-       class="btn btn-primary"><i class="far fa-edit"></i> {{ 'form.btn.edit.label'|trans({}, 'actions') }}</a>
-
-    <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#deleteModal">
-        <i class="fas fa-trash"></i> {{ 'form.btn.delete.label'|trans({}, 'actions') }}
-    </button>
+    {% endif %}
 {% endif %}
 
 <br/>
