--- a/templates/admin/user/index.html.twig
+++ b/templates/admin/user/index.html.twig
@@ -7,10 +7,10 @@
     <div class="card bg-light mb-3">
         <div class="card-header">
             <div class="row">
-                <div class="col">
+                <div class="col-8">
                     <h3>{{ 'user.index.title'|trans({'length': users|length}, 'actions') }}</h3>
                 </div>
-                <div class="col">
+                <div class="col-4">
                     <a class="float-right btn btn-primary" href="{{ path('grr_admin_user_new') }}">
                         <i class="fas fa-plus"></i> {{ 'user.new.title'| trans({}, 'actions') }}</a>
                 </div>
