--- a/templates/front/day/_cell_day_empty.html.twig
+++ b/templates/front/day/_cell_day_empty.html.twig
@@ -1,5 +1,7 @@
 <td>
-    <a href="{{ grrGenerateRouteAddEntry(area.id,room.id, day.day, hourModel.begin.hour, hourModel.begin.minute) }}"
-       class="float-right" title="{{ 'btn.entry.add.title'|trans }}"> <i
-                class="fas fa-plus"></i> </a>
+    {% if is_granted('grr.addEntry', room) %}
+        <a href="{{ grrGenerateRouteAddEntry(area.id,room.id, day.day, hourModel.begin.hour, hourModel.begin.minute) }}"
+           class="float-right" title="{{ 'btn.entry.add.title'|trans }}"> <i
+                    class="fas fa-plus"></i> </a>
+    {% endif %}
 </td>
