account html and secure authorization

--- a/templates/front/account/_authorizations.html.twig
+++ b/templates/front/account/_authorizations.html.twig
@@ -1,1 +1,37 @@
-<h3>Auhtorizations</h3>
+<h3>{{ 'authorization.title'|trans }}</h3>
+
+{% if is_granted(constant('App\\Security\\SecurityRole::ROLE_GRR_ADMINISTRATOR')) %}
+    {{ 'You are a director of Grr'|trans }}
+{% else %}
+    <table class="table table-bordered table-hover">
+        <thead>
+        <tr>
+            <th>{{ 'area.title'|trans }}</th>
+            <th>{{ 'room.title'|trans }}</th>
+            <th data-toggle="tooltip" data-placement="top"
+                title="{{ 'authorization.role.area.administrator.help'|trans }}">{{ 'area.administrator'|trans }}</th>
+            <th data-toggle="tooltip" data-placement="top"
+                title="{{ 'authorization.role.resource.administrator.help'|trans }}">{{ 'area.resource'|trans }}</th>
+        </tr>
+        </thead>
+        <tbody>
+        {% for authorization in authorizations %}
+            <tr>
+                <td>{{ authorization.area }}</td>
+                <td>
+                    {% if authorization.room %}
+                        {{ authorization.room }}<br/>
+                        <span class="text-muted">{{ authorization.room.area }}</span>
+                    {% endif %}
+                </td>
+                <td>{{ authorization.isAreaAdministrator ? 'Yes' | trans : 'No' | trans }}</td>
+                <td>{{ authorization.isResourceAdministrator ? 'Yes' | trans : 'No' | trans }}</td>
+            </tr>
+        {% else %}
+            <tr>
+                <td colspan="6">{{ 'not.found'|trans }}</td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
+{% endif %}
