--- a/templates/front/account/edit_password.html.twig
+++ b/templates/front/account/edit_password.html.twig
@@ -3,12 +3,18 @@
 {% block title %}{{ 'user.password.title'|trans({},'actions') }}{% endblock %}
 
 {% block body %}
-    <h1>{{ user.email }}</h1>
-
-    {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn btn-primary">{{ button_label|default('form.btn.save') | trans({},'actions') }}</button>
-    {{ form_end(form) }}
+    <div class="card bg-light mb-3">
+        <div class="card-header">
+            <h3>{{ 'user.changepassword.title'|trans }} {{ user.name }}</h3>
+        </div>
+        <div class="card-body">
+            {{ form_start(form) }}
+            {{ form_widget(form) }}
+            <button class="btn btn-primary">{{ button_label|default('form.btn.save') | trans({},'actions') }}</button>
+            {{ form_end(form) }}
+        </div>
+    </div>
     <br/>
-    <a href="{{ path('grr_account_show') }}">{{ 'form.btn.cancel'|trans({},'actions') }}</a>
+    <a href="{{ path('grr_account_show',{'id': user.id}) }}"><i
+                class="fas fa-arrow-left"></i> {{ 'form.btn.cancel'|trans({},'actions') }}</a>
 {% endblock %}
