--- a/templates/front/account/_form.html.twig
+++ b/templates/front/account/_form.html.twig
@@ -14,7 +14,7 @@
         {{ form_row(form.email) }}
     </div>
     <div class="col-6">
-
+        {{ form_row(form.username) }}
     </div>
 </div>
 
